# updated_college_proj

./: .env.example  .gitignore  README.md  app.py  config.py  local_setup.py  main.py  models.py  pyproject.toml  requirements.txt  tavily_service.py  test_bson_import.py  test_tavily.py  test_yfinance_service.py  test_yfinance_symbol.py
attached_assets/: Pasted-INFO-routes-analyzer-routes-Getting-financial-context-for-query-What-are-the-key-factors-affecting--1742727757249.txt
data/finance_wisdom/: intelligent_investor.txt  psychology_of_money.txt  rich_dad_poor_dad.txt
routes/: analyzer_routes.py  auth_routes.py
services/: alpha_vantage_service.py  groq_service.py  mongodb_service.py  tavily_service.py  yfinance_service.py
static/css/: style.css
static/js/: main.js
templates/: analyzer.html  base.html  history.html  home.html  login.html  register.html
