[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-pymongo==2.3.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "pymongo==4.6.2",
    "bson==0.5.10",
    "werkzeug>=3.1.3",
    "anthropic>=0.49.0",
]
